# matmul-simd

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
docs/: OPTIMIZATION_JOURNEY.md
python/: numpy_benchmark.py
src/: lib.rs  main.rs
src/blocked/: gemm_12x4.rs  gemm_4x4.rs  gemm_8x8.rs  mod.rs  simple_simd.rs
src/kernels/: kernel_12x4.rs  kernel_4x4.rs  kernel_8x8.rs  mod.rs
src/matrix/: mod.rs  naive_ijk.rs  naive_ikj.rs  transpose.rs
src/threaded/: gemm_12x4_mt.rs  gemm_4x4_mt.rs  gemm_8x8_mt.rs  mod.rs
tests/: correctness.rs
